--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h1 {
 }
 
 
-#play{
+/* #play{
   position: absolute;
   transform: translateX(-50%) translateY(-50%);
   text-align: center;
@@ -31,5 +31,17 @@ h1 {
   transition: color 0.3s ease;
   user-select: none;
   z-index: 3;
-}
+} */
 /* #play:hover { color: rgb(255, 35, 255); } */
+
+.play-btn {
+	color: #13091B;
+	background: #007A99;
+	display: inline-block;
+	padding: 16px 48px;
+	font-size: 18px;
+	cursor: pointer;
+	border-radius: 4px;
+	letter-spacing: 0.1em;
+	z-index: 1;
+}
